--- a/car-rental/src/main/resources/application.properties
+++ b/car-rental/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=car-rental
+spring.application.name=car_rental
+spring.datasource.url=jdbc:mysql://localhost:3306/car-rental
+spring.datasource.username=root
+spring.datasource.password=Geritopsheqeri22@
+// spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
