--- a/car-rental/src/main/resources/application.properties
+++ b/car-rental/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=car_rental
-spring.datasource.url=jdbc:mysql://localhost:3306/car-rental
+spring.datasource.url=jdbc:mysql://localhost:3306/car_rental
 spring.datasource.username=root
 spring.datasource.password=Geritopsheqeri22@
-// spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
