--- a/car-rental/src/main/resources/application.properties
+++ b/car-rental/src/main/resources/application.properties
@@ -1,8 +1,18 @@
+# Application name
 spring.application.name=car_rental
+
+# Database connection configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/car_rental
 spring.datasource.username=root
 spring.datasource.password=Geritopsheqeri22@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA and Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
+
+# Enable detailed error messages for debugging
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+server.error.include-message=always
